[tool.poetry]
build = 'build.py'
name = "buvar"
version = "0.5.0"
description = "General purpose config loader"
authors = ["Oliver Berger <diefans@gmail.com>"]
license = "Apache-2.0"
include = ['COPYRIGHT', 'tests/*']

[tool.poetry.dependencies]
python = "^3.6"
attrs = "*"
pytoml = "*"
structlog = "*"
orjson = "^2.0"
tomlkit = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pytest-cache = "*"
pytest-watch = "*"
pytest-mock = "*"
mock = "*"
async_generator = "*"
coverage = "*"
pylava = "*"
pylava-pylint = "*"
pycodestyle = "*"
pydocstyle = "*"
radon = "*"
isort = "*"
ipython = "*"
pdbpp = "*"
colorlog = "*"
tox = "*"
pytest-randomly = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
